--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "package",
+  "name": "a3-q3",
   "version": "1.0.0",
-  "main": "Q3.js",
+  "description": "A Node.js application using Express and Body-Parser for handling form submissions",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.0"
+  },
+  "engines": {
+    "node": ">=14.x"
+  },
+  "license": "ISC"
 }
