--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "a3-q3",
   "version": "1.0.0",
   "description": "A Node.js application using Express and Body-Parser for handling form submissions",
-  "main": "server.js",
+  "main": "Q3.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node Q3.js"
   },
   "dependencies": {
     "express": "^4.18.2",
